# wyldfyre-ai

./: .env.example  .gitignore  .pai-protected.json  .pre-commit-config.yaml  ARCHITECTURE.md  BELIEFS.md  BUILD_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODELS.md  Makefile  README.md  SECURITY.md  alembic.ini  cleanup-blackbook-dev.sh  cleanup-summary-blackbook.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  install.sh  organize-docs-blackbook.sh  package-lock.json  package.json  pyproject.toml  qa-summary.json  qa-verification-report.md  start-supervisor.sh  template.html
.claude/commands/: install.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agents/: CLAUDE.md
agents/_template/: README.md  pyproject.toml
agents/_template/src/template_agent/: __init__.py  agent.py
agents/_template/src/template_agent/tools/: __init__.py
agents/_template/tests/: __init__.py  test_agent.py
agents/code/: pyproject.toml
agents/code/src/code_agent/: __init__.py  agent.py
agents/code/src/code_agent/tools/: __init__.py  code_analysis_tools.py  edit_tools.py  file_tools.py  git_tools.py
agents/data/: pyproject.toml
agents/infra/: pyproject.toml
agents/qa/: pyproject.toml
agents/research/: pyproject.toml
agents/research/src/research_agent/: agent.py
config/: agents.yaml  features.yaml  security.yaml
config/prompts/: code_agent.md  supervisor.md
config/router/: router_config.yaml  training_data.csv  training_data.jsonl
database/: pyproject.toml
database/migrations/: 99-init-nocobase-db.sql  env.py
database/migrations/versions/: 001_initial.py  002_api_usage.py  003_projects_conversations.py  004_credentials.py  005_domain_project.py  006_project_agent_context.py  007_api_usage_project.py  008_project_root_path.py  009_domain_deploy_fields.py  010_project_primary_url.py  011_messages_table.py  012_conversation_tags.py  013_project_terminal_user.py  014_project_docker_settings.py  015_step_scores_table.py  016_github_integration.py  017_provider_usage.py  018_project_quality_settings.py
database/models/: __init__.py  api_usage.py  conversation.py  conversation_tag.py  credential.py  domain.py  message.py  project.py  provider_usage.py  task.py  user.py
database/src/ai_db/: __init__.py  base.py  domain.py  project.py  task.py  user.py
docs/: DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
infrastructure/docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.voice  Dockerfile.web
infrastructure/docs/: SERVER_REQUIREMENTS.md
infrastructure/loki/: loki-config.yml
infrastructure/nginx/: metrics-proxy.conf  nginx.conf  ssl-params.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/scripts/: agent-status.sh  install.sh  preflight-check.sh  setup-project-user.sh  start-agents.sh  stop-agents.sh  wyldfyre-session.sh
pai/: browser_helpers.json
pai/TELOS/: BELIEFS.md  CHALLENGES.md  DELEGATION.md  GOALS.md  IDEAS.md  LEARNED.md  MISSION.md  MODELS.md  NARRATIVES.md  PROJECTS.md  (+5 more)
scripts/: analyze_and_update_memories.py  analyze_memories.py  audit_warm_memories.py  backup.sh  cleanup_low_quality_memories.py  cleanup_memories.py  docker-cleanup.sh  fix_memory_metadata.py  memory_audit_report.json  migrate_pai_to_agent_learnings.py  setup.sh  start_agent.sh  train_content_router.py  verify_memory_tiers.py
services/: CLAUDE.md
services/agents/base/: pyproject.toml
services/agents/base/src/base_agent/: __init__.py  agent.py  tools.py
services/agents/base/src/base_agent/shared_tools/: __init__.py  collaboration_tools.py  memory_tools.py
services/agents/infra_agent/: README.md  pyproject.toml
services/agents/infra_agent/src/infra_agent/: __main__.py  agent.py
services/agents/infra_agent/src/infra_agent/templates/: __init__.py  docker_templates.py  nginx_templates.py  systemd_templates.py
services/agents/infra_agent/src/infra_agent/tools/: __init__.py  docker_tools.py  monitoring_tools.py  nginx_tools.py  ssl_tools.py  systemd_tools.py
services/agents/qa_agent/: README.md  pyproject.toml
services/agents/qa_agent/src/qa_agent/: __init__.py  __main__.py  agent.py  browser_config.py  browser_fixtures.py  browser_helpers.py  browser_manager.py  credential_store.py
services/agents/qa_agent/src/qa_agent/tools/: __init__.py  browser_actions.py  browser_assertions.py  browser_auth.py  browser_capture.py  browser_network.py  browser_tools.py  security_tools.py  test_tools.py
services/api/: README.md  pyproject.toml
services/api/src/api/: __init__.py  commands.py  config.py  database.py  dependencies.py  main.py  plan_mode.py
services/api/src/api/middleware/: __init__.py  logging.py  rate_limit.py
services/api/src/api/routes/: __init__.py  agents.py  auth.py  browser.py  chat.py  containers.py  conversations.py  domains.py  files.py  github.py  grafana_proxy.py  health.py  integrations.py  memory.py  notifications.py  plans.py  projects.py  settings.py  tasks.py  telos.py  usage.py  workspace.py
services/api/src/api/schemas/: __init__.py  agent.py  auth.py  common.py  conversation.py  domain.py  github.py  integrations.py  plans.py  project.py  task.py  usage.py  workspace.py
services/api/src/api/services/: __init__.py  auth_service.py  container_service.py  domain_service.py  file_watcher.py  github_service.py  health_checker.py  usage_sync_service.py
services/api/src/api/websocket/: __init__.py  browser.py  handlers.py  manager.py  terminal.py
services/supervisor/: README.md  pyproject.toml  start.sh
services/supervisor/src/supervisor/: __init__.py  __main__.py  agent.py  consolidation.py  plugins_bridge.py  router.py
services/voice/: pyproject.toml
services/voice/src/voice_service/: __init__.py  config.py  main.py  synthesis.py  transcription.py
services/voice/src/voice_service/routes/: __init__.py  health.py  synthesize.py  transcribe.py
web/: next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-mobile.spec.ts
(+291 files in other folders)
