[project]
name = "ai-db"
version = "0.1.0"
description = "Database models for AI Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_db"]
