[project]
name = "research-agent"
version = "0.1.0"
description = "Research agent for AI Infrastructure - web search, documentation, synthesis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
    "ai-messaging",
    "ai-memory",
    "ai-base-agent",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]
