[project]
name = "ai-api"
version = "0.1.0"
description = "FastAPI backend for AI Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
    "ai-db",
    "ai-messaging",
    "ai-memory",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1.0",  # Pin bcrypt to avoid passlib compatibility issues
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",  # For Grafana SSO proxy
    "pyyaml>=6.0.0",  # For loading agent configuration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
