[project]
name = "infra-agent"
version = "0.1.0"
description = "Infrastructure agent for AI Infrastructure - Docker, Nginx, SSL, domains"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
    "ai-messaging",
    "ai-memory",
    "base-agent",
    "aiofiles>=23.2.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra_agent"]
