[project]
name = "qa-agent"
version = "0.1.0"
description = "QA agent for AI Infrastructure - testing, code review, security validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-core",
    "ai-messaging",
    "ai-memory",
    "base-agent",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qa_agent"]
